# VibeCode

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: vibe_code.yml  vibecode.yml
src/vibe_code_aurealis/: __init__.py  main.py
