[project]
name = "vibe_code_aurealis"
version = "1.0.0"
authors = [
  { name="Tomasz Badura", email="tomaszbadurakontakt@gmail.com" },
]
description = "A package that embraces vibe coding."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TomaszBadura/VibeCode"
Issues = "https://github.com/TomaszBadura/VibeCode/Issues"